# TIL

./: C++.md  Database.md  Datastrukter_and_agoritm.md  Docker.md  ER model.md  ER modeling.md  ER modellering.md  Github.md  JavaScript.md  LICENSE  Network.md  OtherThings.md  Pytest.md  README.md  Terminal.md
C++/: C++.md  C++_teori.md  test.cpp  uppgifter_del1.cpp
C++/Förelässning2 - modul 3/: CMakeLists.txt  Competitor.cpp  Competitor.h  Jumper.cpp  Jumper.h  Runner.cpp  Runner.h  Test.cpp
C++/Lab1/: CMakeLists.txt  Dice.cpp  Dice.h  DiceRoller.cpp  DiceRoller.h  DiceRollerFactory.cpp  DiceRollerFactory.h  Player.cpp  Player.h  game.cpp  game.h  main.cpp  utils.cpp  utils.h
C++/Lab3/: Article.cpp  Article.h  CMakeLists.txt  Glasses.cpp  Glasses.h  Notepad.cpp  Notepad.h  ReadingGlasses.cpp  ReadingGlasses.h  Stock.cpp  Stock.h  StockGlasses.cpp  StockGlasses.h  SunGlasses.cpp  SunGlasses.h  ToiletRolls.cpp  ToiletRolls.h  main.cpp
C++/Lektion2/: CMakeLists.txt  Todo.h  first.txt  second.txt  third.txt
C++/Lektion4/: Buddy.cpp  Buddy.h  BuddyBook.cpp  BuddyBook.h  CMakeLists.txt  Competition.cpp  Competition.h  Garage.cpp  Garage.h  Laboration1.cpp  Laboration1.h  Member.cpp  Member.h  SaunaGroup.cpp  SaunaGroup.h  Stack.h  Swimmer.cpp  Swimmer.h  Vehicle.cpp  Vehicle.h  cart.cpp  cart.h  circle.cpp  circle.h  generic_func.h  main.cpp  student.cpp  student.h  toycar.cpp  toycar.h  wallpaper.cpp  wallpaper.h
C++/Module3/: CMakeLists.txt  EggPackage.cpp  EggPackage.h  Milk.cpp  Milk.h  Product.cpp  Product.h  main.cpp
C++/ProjectFashionStore/: CMakeLists.txt  Clothing.cpp  Clothing.h  Cosmetic.cpp  Cosmetic.h  Employee.cpp  Employee.h  EmployeeHandler.cpp  EmployeeHandler.h  Management.cpp  Management.h  Menu.cpp  Menu.h  Product.cpp  Product.h  ProductHandler.cpp  ProductHandler.h  main.cpp
C++/Övningsuppgifter - Variabler, datatyper och uttryck/: CMakeLists.txt  Functions.cpp  Functions.hpp  TestBigExercise.cpp  main.cpp
Database & Javascript/: Database.md  JavaScript.md
