cmake_minimum_required(VERSION 3.29)
project(Lektion4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lektion4
        main.cpp
        rectangle.cpp
        rectangle.h
        toycar.cpp
        toycar.h
        student.cpp
        student.h
        wallpaper.cpp
        wallpaper.h
        cart.cpp
        cart.h
        circle.cpp
        circle.h
        SaunaGroup.cpp
        SaunaGroup.h
        Member.cpp
        Member.h
        Swimmer.cpp
        Swimmer.h
        Competition.cpp
        Competition.h
        Buddy.cpp
        Buddy.h
        BuddyBook.cpp
        BuddyBook.h
        Retanglar.cpp
        Retanglar.h
        Laboration1.cpp
        Laboration1.h
        Vehicle.cpp
        Vehicle.h
        Garage.cpp
        Garage.h
        generic_func.h
        Stack.h)
