cmake_minimum_required(VERSION 3.29)
project(Ovningsuppgifter___Variabler__datatyper_och_uttryck)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ovningsuppgifter___Variabler__datatyper_och_uttryck
        Functions.hpp
        Functions.cpp
        TestBigExercise.cpp
        TestBigExercise.cpp
        Functions.hpp)
